legacy/1.0/kubernetes/media/jellyfin/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellyfin
  namespace: media
spec:
  serviceName: "jellyfin"
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      automountServiceAccountToken: false
      # securityContext:
      #   supplementalGroups:
      #     - 105 # Change this to match gyour "render" host group id from "getent group render | cut -d: -f3"
      containers:
        # Container
        - name: jellyfin
          image: jellyfin/jellyfin:10.10.7
          # Resources
          resources:
            requests:
              gpu.intel.com/i915: "1"
              cpu: 1000m
              memory: 1Gi
              ephemeral-storage: 32Gi
            limits:
              gpu.intel.com/i915: "1"
              cpu: 4000m
              memory: 8Gi
              ephemeral-storage: 32Gi
          # Ports
          ports:
            - name: jellyfin-http
              containerPort: 8096
              protocol: TCP
          # Probes
          livenessProbe:
            httpGet:
              path: /health
              port: jellyfin-http
          readinessProbe:
            httpGet:
              path: /
              port: jellyfin-http
            initialDelaySeconds: 5
            periodSeconds: 5
          # securityContext:
          #   privileged: true
          # Volume Mounts
          volumeMounts:
            - name: jellyfin-data
              mountPath: /config
            - name: homelab-nfs
              mountPath: /mnt/media
            - name: tls-certs
              mountPath: /config/tls
              readOnly: true
            # - name: "render-device"
            #   mountPath: "/dev/dri/renderD128"
      volumes:
        - name: homelab-nfs
          nfs:
            server: 192.168.69.70
            path: /volume1/library
        - name: tls-certs
          secret:
            secretName: jellyfin.mcmumf.dev-tls
        # - name: "render-device"
        #   hostPath:
        #     path: "/dev/dri/renderD128"
  volumeClaimTemplates:
    - metadata:
        name: jellyfin-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "openebs"
        resources:
          requests:
            storage: 32Gi
