legacy/1.0/kubernetes/media/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: media
  labels:
    app: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
    - port: 8096
      name: jellyfin
    - port: 1900
      name: dlna
      protocol: UDP
